--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Сайт крупнейшего производителя асфальтосмесительных установок на территории РФ.
+      Заходите и оставляйте заявку на обратную связь!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,6 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png" />
     <title>Колокшанские Асфальтосмесители</title>
   </head>
   <body>
